refrence and class table updated

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,7 @@
     "configurations": [
         {
             "name": "Python: Current File",
+            "logToFile": true,
             "type": "python",
             "request": "launch",
             "program": "${file}",
